5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1807_2563.log
== TEST (2019-06-06 16:15:26) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for ([x for x in a if x <= 5 < 7])
		
	
	
-- ERROR:
File "XXXX", line 6
    for ([x for x in a if x <= 5 < 7])
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:15:31) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for [x for x in a if x <= 5 < 7]
		
	
	
-- ERROR:
File "XXXX", line 6
    for [x for x in a if x <= 5 < 7]
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:15:38) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([x for x in a if x <= 5 < 7]
		
	
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:02) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([x for x in a if x <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:21) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([a for a in vet if x <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:23) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([a for a in vet if x <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:29) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([a for a in vet if a <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:16:30) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	([a for a in vet if a <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:13) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	b = array([a for a in vet if a <= 5 < 7]
	 a += 1
print(a)
-- ERROR:
File "XXXX", line 7
    a += 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:17) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	b = array([a for a in vet if a <= 5 < 7]
	 
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:23) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([a for a in vet if a <= 5 < 7]
	 
print(b)
-- ERROR:
File "XXXX", line 7
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:17:26) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([a for a in vet if a <= 5 < 7]
	 
print(b)
-- EXECUTION TIME:
0.620217
-- ERROR:
  File "/home/codebench/codes/1807/2563/main.py", line 7
    print(b)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:50) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	b = array([x for x in vet if a <= 5 < 7]
	 
print(b)
-- ERROR:
File "XXXX", line 8
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:17:54) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([x for x in vet if a <= 5 < 7]
	 
print(b)
-- ERROR:
File "XXXX", line 7
    print(b)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:03) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:04) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:16) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:20) 
-- CODE:
from numpy import*
vet = array((input)


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
File "XXXX", line 5
    b = array([x for x in vet if a <= 5 < 7])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:22) 
-- CODE:
from numpy import*
vet = array((input)


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
File "XXXX", line 5
    b = array([x for x in vet if a <= 5 < 7])
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:27) 
-- CODE:
from numpy import*
vet = array(eval(input))


b = array([x for x in vet if a <= 5 < 7])
	 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:09) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:10) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:23) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:35) 
-- CODE:
from numpy import*
vet = array(eval(input))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:50) 
-- CODE:
from numpy import*
vet = array(eval(input()))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
print(a)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:21:21) 
-- CODE:
from numpy import*
vet = array(eval(input()))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
	print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:22:57) 
-- CODE:
from numpy import*
vet = array(eval(input()))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
	print(a)
	vet = array(eval(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:23:07) 
-- CODE:
from numpy import*
vet = array(eval(input()))

while size(vet) > 1:
	a = 0
	for b in vet:
		if b >= 5 and b < 7:
			a += 1
	print(a)
	vet = array(eval(input()))
-- EXECUTION TIME:
1.10597
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
